# arrmageddon

./: .gitignore  README.md  dirsetup.sh  pyproject.toml
app/: __init__.py
app/modules/lidarr/: __init__.py  routes.py
app/modules/readarr/: __init__.py  routes.py
app/modules/spotiplex/: __init__.py  routes.py
arrmageddon/: run.py
arrmageddon/app/: __init__.py  forms.py
arrmageddon/app/main/: routes.py
arrmageddon/app/modules/: __init__.py
arrmageddon/app/modules/book_tools/: __init__.py  functions.py  routes.py  unmonitor_books.py
arrmageddon/app/modules/confighandler/: __init__.py  main.py
arrmageddon/app/modules/lidarr/: __init__.py  main.py  routes.py
arrmageddon/app/modules/music_tools/: __init__.py  routes.py
arrmageddon/app/modules/plex/: __init__.py  main.py
arrmageddon/app/modules/readarr/: __init__.py  main.py  routes.py
arrmageddon/app/modules/spotify/: __init__.py  main.py
arrmageddon/app/modules/spotiplex/: __init__.py  main.py  routes.py
arrmageddon/app/templates/: base.html.j2  book_tools.html.j2  home.html.j2  music_tools.html.j2  playlist_sync.html.j2  settings.html.j2
arrmageddon/app/templates/book_tools/: abs_tag_sync.html.j2  better_ui.html.j2
